fixed bug, navbar now visisble on team dashboard view

--- a/partials/teamDashboard.html
+++ b/partials/teamDashboard.html
@@ -1,4 +1,4 @@
-<div class="text-center" id="teamDashboard" ng-controller="TeamViewCtrl" ng-init="init($routeParams.teamId)">
+<div class="text-center" id="teamDashboard">
 
     <h1>{{team.name}} {{team.season}}</h1>
 
