--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse" ng-controller="NavCtrl" ng-show="userLoggedIn">
+<nav class="navbar navbar-inverse" ng-controller="NavCtrl" >
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -13,7 +13,7 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right" ng-show="userLoggedIn">
                 <li><a ng-href="#!/auth" ng-click="logoutUser()">Logout</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
