coach can edit and/or deletegames with a status of upcoming

--- a/partials/coachAccess/upcomingGameCreateAndEdit.html
+++ b/partials/coachAccess/upcomingGameCreateAndEdit.html
@@ -1,7 +1,7 @@
 <div id="createGame">
         <h2>Add a Game to Your Schedule</h1> 
             
-        <form>
+        <form ng-if="gameID === false">
             <input type="text" placeholder="Opposing Team" required ng-model="game.opposition">
             <input type="text" placeholder="Location" required ng-model="game.location">
             <input type="date" placeholder="date" required ng-model="game.date">
@@ -12,6 +12,18 @@
                 <button type="submit" class="btn btn-warning" value="Save" ng-click="saveAndClose(game, coach)">Done</button>
             </div>
         </form>
+
+        <form ng-if="gameID === true">
+                <input type="text" placeholder="{{fbGame.opposition}}"  ng-model="game.opposition">
+                <input type="text" placeholder="{{fbGame.location}}"  ng-model="game.location">
+                <input type="date" placeholder="{{fbGame.date}}"  ng-model="game.date">
+                <input type="time" placeholder="{{fbGame.time}}"  ng-model="game.time">
+                
+                <div>
+                    <button type="submit" class="btn btn-warning" value="Delete" ng-click="deleteGame(game, coach)">Delete Game From Schedule</button>
+                    <button type="submit" class="btn btn-warning" value="Save" ng-click="editGame(game, coach)">Save</button>
+                </div>
+            </form>
     
     
     </div>
