--- a/partials/auth.html
+++ b/partials/auth.html
@@ -1,37 +1,33 @@
 <div class="text-center landing" id="auth">
         
     <div class="login">
-            <h1>SnagStat</h1> 
 
-            <button type="button" class="btn btn-primary" ng-click="authenticate()" ng-model="singleModel" uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
-                Login With Google
-            </button>
-            <!-- <button class="btn btn-default " ng-click="authenticate()">
-                Login With Google
-            </button> -->
+        <h1>SnagStat</h1> 
 
-            <!-- <div class="dropdown show">
-                <button><a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Sign up as..
-                    </a>
-                
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        <a class="dropdown-item" ng-click="newCoachAuthenticate()">Coach</a>
-                        <a class="dropdown-item" ng-click="newTrackerAuthenticate()">Tracker</a>
-                    </div>
+        <div class="row">
+            <div class="imageContainer col-md-4 col-md-offset-4">
+                <img src="./images/snagstat.png" alt="snagstat logo">
+            </div>
+        </div>
+
+        <div class="row d-flex justify-content-center">
+            <div class="col-xs-10 col-xs-offset-1 col-md-2">
+                <button type="button" class="btn btn-primary" ng-click="authenticate()" ng-model="singleModel" uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
+                    Login With Google
                 </button>
-            </div> -->
+            </div>
 
-            <div class="btn-group" uib-dropdown is-open="status.isopen">
-                    <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
-                        Sign up as.. <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
-                      <li role="menuitem"><a href="#" ng-click="newCoachAuthenticate()">Coach</a></li>
-                      <li role="menuitem"><a href="#" ng-click="newTrackerAuthenticate()">Tracker</a></li>
-                    </ul>
-                  </div>
-              
+            <div class="col-xs-10 col-xs-offset-1 col-md-2 btn-group" uib-dropdown is-open="status.isopen" >
+                <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+                    Sign up as.. <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu col-xs-10 col-xs-offset-1" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                    <li role="menuitem"><a href="#" ng-click="newCoachAuthenticate()">Coach</a></li>
+                    <li role="menuitem"><a href="#" ng-click="newTrackerAuthenticate()">Tracker</a></li>
+                </ul>
+            </div>
+        </div>
+
     </div>
 
 </div>
