--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -8,8 +8,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#"><img src="./images/snagstat.png" alt=
-        "snagstat logo"></a>
+        <a class="navbar-brand" href="#"><img src="./images/snagstat-white.png" alt=
+        "snagstat logo"><h4>SnagStat</h4></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
