--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,2 +1,18 @@
-$blue-dark-text: #0b4075;
+
+
+$blue-dark: #0b4075;
+$blue-med: #115a9e;
+$blue-light: #1572c4;
+
+$neutral-dark:  #b19a6c;
+$neutral-med:  #D3BC8D;
+$neutral-light: #f5dcab;
+
+$grey-dark: #494949;
+$grey-med: #686666;
+$grey-light: #aaaaaa;
+
+$white: #ffffff;
+$silver: #c0c0c0;
+$gold: #c59e50;
 
