--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,11 +7,15 @@ body {
 }
 
 nav {
-	background: transparent;
+	background: $blue-dark !important;
+	font-family: $branded-text !important;
+
+	a {
+		color: $white !important;
+	}
 	
 	img {
 		height: 35px;
-
 	}
 }
 
@@ -29,7 +33,7 @@ nav {
 	h1 {
 		font-family: $branded-text;
 		size: 300%;
-		color: $blue-dark-text;
+		color: $blue-dark;
 		margin-top: 0;
 		padding-top: 2%;
 	}
@@ -59,6 +63,25 @@ nav {
 // 	background-color: 
 // }
 
+.btn {
+	-webkit-box-shadow: 0px 1px 3px #666666;
+	-moz-box-shadow: 0px 1px 3px #666666;
+	box-shadow: 0px 1px 3px #666666;
+	font-family: $content-text;
+	;
+	color: #ffffff;
+	font-size: 14px;
+	background: #0b4075;
+	padding: 10px 20px 10px 20px;
+	border: solid #c0c0c0 2px;
+	text-decoration: none;
+  }
+  
+  .btn:hover {
+	background: #494949;
+	text-decoration: none;
+	color: #ffffff;
+  }
 
 
 
