centered auth buttons

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -9,7 +9,7 @@
             <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="#"><img src="./images/snagstat-white.png" alt=
-        "snagstat logo"><h4>SnagStat</h4></a>
+        "snagstat logo"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
