--- a/partials/auth.html
+++ b/partials/auth.html
@@ -10,18 +10,18 @@
             </div>
         </div>
 
-        <div class="row d-flex justify-content-center">
-            <div class="col-xs-10 col-xs-offset-1 col-md-2">
-                <button type="button" class="btn btn-primary" ng-click="authenticate()" ng-model="singleModel" uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
+        <div class="row" id="authButtons">
+            <div>
+                <button type="button" class="btn auth-button" ng-click="authenticate()" ng-model="singleModel" uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
                     Login With Google
                 </button>
             </div>
 
-            <div class="col-xs-10 col-xs-offset-1 col-md-2 btn-group" uib-dropdown is-open="status.isopen" >
-                <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+            <div class="btn-group" uib-dropdown is-open="status.isopen" >
+                <button id="single-button" type="button" class="btn  auth-button" uib-dropdown-toggle ng-disabled="disabled">
                     Sign up as.. <span class="caret"></span>
                 </button>
-                <ul class="dropdown-menu col-xs-10 col-xs-offset-1" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
                     <li role="menuitem"><a href="#" ng-click="newCoachAuthenticate()">Coach</a></li>
                     <li role="menuitem"><a href="#" ng-click="newTrackerAuthenticate()">Tracker</a></li>
                 </ul>
