--- a/partials/coachAccess/upcomingGameCreateAndEdit.html
+++ b/partials/coachAccess/upcomingGameCreateAndEdit.html
@@ -1,7 +1,6 @@
 <div id="createGame">
             
 <!-- CREATE NEW GAME: -->
-    
     <div ng-if="gameID === false">
         <h2 class="text-center">Add a Game to Your Schedule</h1> 
                         
@@ -10,7 +9,6 @@
             <div class="form-group col-md-4 col-md-offset-4">
                 <label for="gameOpposition">Opposing Team</label>
                 <input required ng-model="game.opposition" type="text" class="form-control" id="gameOpposition" aria-describedby="gameHelp" placeholder="Enter Opposing Team Name">
-                <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
             </div>
 
             <div class="form-group col-md-4 col-md-offset-4">
@@ -34,13 +32,10 @@
                 <button type="submit" class="btn" value="Save" ng-click="saveAndClose(game, coach)">Done</button>
             </div>
 
-
-                        
         </form> 
     </div>
 
-
-<!-- EDITING EXISTING GAME: -->
+<!-- EDIT EXISTING GAME: -->
     <div ng-if="gameID === true">
         <h2 class="text-center">Edit Upcoming Game</h1> 
                     
@@ -49,7 +44,6 @@
             <div class="form-group col-md-4 col-md-offset-4">
                 <label for="gameOpposition">Opposing Team</label>
                 <input required ng-model="game.opposition" type="text" class="form-control" id="gameOpposition" aria-describedby="gameHelp" placeholder="{{fbGame.opposition}}">
-                <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
             </div>
 
             <div class="form-group col-md-4 col-md-offset-4">
