--- a/partials/teamDashboard.html
+++ b/partials/teamDashboard.html
@@ -29,9 +29,10 @@
 <!-- COACH VIEW - GAME SCHEDULE -->
     <div class="gameSchedule" ng-if="coachView === true">
         <h3 class="text-center">Game Schedule</h3>
-        
-        <table class="table table-hover" id="coachGameSchedule">
-            <thead class="thead-light">
+        <div id="coachGameSchedule">
+                
+        <table class="table table-hover">
+            <thead>
                 <tr>
                     <th scope="col-md-1" class="justify-right col-md-1"></th>
                     <th scope="col" class="col-md-1">Opposing Team</th>
@@ -40,21 +41,27 @@
                     <th scope="col" class="col-md-1">Time</th>                
                 </tr>
             </thead>
-            <tbody class="table-striped" ng-if="game.outcome === '';" ng-repeat="game in games">
-                <tr>
-                    <td class="col-md-1">
-                        <button class="btn" ng-if="game.status === 'upcoming'" ng-click="editGame(game)">Edit</button>
-                        <button class="btn" ng-if="game.status === 'pending' " ng-click="finalizeGame(game)">Finalize</button>
-                    </td>
-                    
-                    <td class="col-md-1">{{game.opposition}}</td> 
-                    <td class="col-md-1">{{game.location}}</td>
-                    <td class="col-md-1">{{game.date | date:'MM/dd/yyyy'}}</td>
-                    <td class="col-md-1">{{game.time | date:'h:mma'}}</td>
+                <tbody class="table-striped" ng-if="game.outcome === '';" ng-repeat="game in games">
+                    <tr>
+                        <td class="col-md-1" id="coach-buttons">
+                            <button class="btn" ng-if="game.status === 'upcoming'" ng-click="editGame(game)">Edit</button>
+                            <button class="btn" ng-if="game.status === 'pending' " ng-click="finalizeGame(game)">Finalize</button>
+                        </td>
+                        
+                        <td class="col-md-1">{{game.opposition}}</td> 
+                        <td class="col-md-1">{{game.location}}</td>
+                        <td class="col-md-1">{{game.date | date:'MM/dd/yyyy'}}</td>
+                        <td class="col-md-1">{{game.time | date:'h:mma'}}</td>
 
-                </tr>
-            </tbody>
+                    </tr>
+                </tbody>
         </table>
+        </div>
+        
+
+        <div class="row">
+            <button ng-click="addGame(teamId)" type="submit" class="btn col-md-4 col-md-offset-4">Add Game to Schedule</button>
+        </div>
     </div>
 
 <!-- TRACKER VIEW - GAME SCHEDULE -->
@@ -87,5 +94,4 @@
         </table>
 
     </div>
-
 </div>
