--- a/styles/main.css
+++ b/styles/main.css
@@ -85,5 +85,16 @@ table {
 .table th {
   font-size: 125%; }
 
+#coach-buttons {
+  text-align: right; }
+
 .team-stat-head {
   font-family: "Krona One", sans-serif; }
+
+#coachGameSchedule {
+  display: inline-block;
+  max-height: 345px;
+  overflow-y: scroll; }
+
+thead {
+  table-layout: fixed; }
