added game history view and functionality

--- a/partials/auth.html
+++ b/partials/auth.html
@@ -10,9 +10,9 @@
             </div>
         </div>
 
-        <div class="row" id="authButtons">
+        <div class="row" id="buttonGroup">
             <div>
-                <button type="button" class="btn auth-button" ng-click="authenticate()" ng-model="singleModel" uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
+                <button type="button" class="btn button-group" ng-click="authenticate()" ng-model="singleModel" uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
                     Login With Google
                 </button>
             </div>
