--- a/partials/coachAccess/upcomingGameCreateAndEdit.html
+++ b/partials/coachAccess/upcomingGameCreateAndEdit.html
@@ -29,7 +29,7 @@
                                 
             <div class="form-group col-md-4 col-md-offset-4">
                 <button type="submit" class="btn" value="Save" ng-click="saveAndAddAnotherGame(game, coach)">Add Another Game</button>
-                <button type="submit" class="btn" value="Save" ng-click="saveAndClose(game, coach)">Done</button>
+                <button type="submit" class="btn" value="Save" ng-click="saveAndClose(game)">Done</button>
             </div>
 
         </form> 
